--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
     </header>
     <nav>
       <ul id="current-difficulty">
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
-        <li>D</li>
+        <li>Easy Diff</li>
+        <li>Normal Diff</li>
+        <li>Heroic</li>
+        <li>Legendary Diff</li>
       </ul>
     </nav>
     <main>
-      <section id="correct"></section>
+      <section id="correct">Correct Bar</section>
       <section id="quiz-question">
-        <h2>What number am I thinking of?</h2>
+        <h2>Question</h2>
         <ul>
-          <li>1</li>
-          <li>7</li>
-          <li>21</li>
-          <li>3.14</li>
+          <li>A</li>
+          <li>B</li>
+          <li>C</li>
+          <li>D</li>
         </ul>
       </section>
-      <section id="incorrect"></section>
+      <section id="incorrect">Incorrect Bar</section>
     </main>
     <footer>
-      <section id="timer"></section>
-      <section id="progress"></section>
+      <section id="timer">Timer</section>
+      <section id="progress">Progress Percentage</section>
     </footer>
     <script src="script.js"></script>
   </body>
